# SampleCode

./: README  README.md
AuctionHouse/: README.md  auctionhouse.c
BookIndexGenerator/: Makefile  Makefile.in  README  TODO  aclocal.m4  common10k.txt  commonwords.txt  config.h  config.status  configure  configure.ac  configure.scan  install-sh  missing
BookIndexGenerator/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
BookIndexGenerator/samplebooks/: Gardner_CognitivePatterns.txt  book_section.txt
BookIndexGenerator/src/: BookIndex.cc  BookIndex.h  BookIndexFactory.cc  BookIndexFactory.h  BookIndexHash.cc  BookIndexHash.h  BookIndexMapReduce.cc  BookIndexMapReduce.h  BookIndexRBTree.cc  BookIndexRBTree.h  CommonWordHash.cc  CommonWordHash.h  Makefile  Makefile.am  Makefile.in  index_gen.cc  scratch.cc
FibPrime/: .#README.md  README.md  fibprime.c
TopCoder/: wallgamediv.c
TopCoder/FriendGraph/: MinRetweets.cc  README
TopCoder/MarblePositioning/: MarblePositioning.cc
